Confluence Logic Design Language and Compiler

Copyright (C) 2003-2005 Tom Hawkins


Release Notes

  * Denotes changes that impact backward compatibility.


------------------------------------------------------------------------
Confluence 0.10.3 -- ???

  - Changed FNF select primitive to select a single bit.


------------------------------------------------------------------------
Confluence 0.10.2 -- 02/01/2005

  - Added JHDL FNF code generator.  (Contributed by Nathan Cain)


------------------------------------------------------------------------
Confluence 0.10.1 -- 01/19/2005

  - New syntax for naming local namespaces:

    my_system = local a b c is (* ... *) end

  - New syntax for naming instantiations.  The following are equivalent:

    my_value  = {my_system : my_component arg1 arg2 $}

    my_system = {my_component arg1 ang2 _}
    my_value  = my_system.3

  - FNF supports VHDL code generation.

  - Outdated examples removed from distribution.


------------------------------------------------------------------------
Confluence 0.10.0 -- 01/07/2005

  * Number of instantiation arguments must match number of component arguments.
    Use _ to fill in the blanks:  {reg data_width _ _}

  * FNF combined with Confluence installation.  Nls and Lp modules are removed.
    CF now produces an FNF netlist.  Use FNF to generate C, Verilog, etc.

  * Most command line options have changed or have been removed.

  * The following primitives have been removed:
      ram, rom, inout, tristate, join, header, assert, display

  * ram_wbr, ram_rbw, and rom components are implemented with registers, decoders, and muxes.

  * No support for VHDL or C code generation (temporary).

  - Happy New Year!  Please share your good forturne with the
    tsunami victims.  Donate today!


------------------------------------------------------------------------
Confluence 0.9.3 -- 10/12/2004

  - The (') operater can be now used to create vector constants: wid'val
